--- a/exercicio/ex022/fundo006.html
+++ b/exercicio/ex022/fundo006.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de tela
+
+    </title>
     <style>
         body{
             height: 100vh;
@@ -12,10 +14,12 @@
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+            /*short hand*/
         }
         main{
             background-color: aliceblue;
-            width: 400px;
+            max-width: 800px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -26,7 +30,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati doloribus maxime velit, sint at assumenda alias iure quidem mollitia corporis ut recusandae. Doloribus ducimus fugit unde dicta facere nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati doloribus maxime velit, sint at assumenda alias iure quidem mollitia corporis ut recusandae. Doloribus ducimus fugit unde dicta facere nobis!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati doloribus maxime velit, sint at assumenda alias iure quidem mollitia corporis ut recusandae. Doloribus ducimus fugit unde dicta facere nobis!; Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam similique temporibus quae pariatur odio molestiae quisquam accusantium assumenda voluptatibus, ullam, autem veniam deserunt eius vitae asperiores non inventore sequi et.;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores nulla, voluptatem labore, assumenda neque voluptatum possimus corrupti temporibus veniam amet accusamus! Magni, provident soluta vitae laudantium delectus voluptatibus nihil dolore.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati doloribus maxime velit, sint at assumenda alias iure quidem mollitia corporis ut recusandae. Doloribus ducimus fugit unde dicta facere nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati doloribus maxime velit, sint at assumenda alias iure quidem mollitia corporis ut recusandae. Doloribus ducimus fugit unde dicta facere nobis!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati doloribus maxime velit, sint at assumenda alias iure quidem mollitia corporis ut recusandae. Doloribus ducimus fugit unde dicta facere nobis!; Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam similique temporibus quae pariatur odio molestiae quisquam accusantium assumenda voluptatibus, ullam, autem veniam deserunt eius vitae asperiores non inventore sequi et.;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores nulla, voluptatem labore, assumenda neque voluptatum possimus corrupti temporibus veniam amet accusamus! Magni, provident soluta vitae laudantium delectus voluptatibus nihil dolore.;Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ad voluptate itaque quaerat quos officia tempore cupiditate, modi quia voluptas velit fuga ex. Doloribus, expedita reprehenderit laborum dignissimos necessitatibus numquam.;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla distinctio repellendus esse voluptatum adipisci facere reiciendis explicabo unde commodi in, ipsum suscipit possimus vitae minus! Dolor suscipit laboriosam odio non.Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati doloribus maxime velit, sint at assumenda alias iure quidem mollitia corporis ut recusandae. Doloribus ducimus fugit unde dicta facere nobis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati doloribus maxime velit, sint at assumenda alias iure quidem mollitia corporis ut recusandae. Doloribus ducimus fugit unde dicta facere nobis!Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati doloribus maxime velit, sint at assumenda alias iure quidem mollitia corporis ut recusandae. Doloribus ducimus fugit unde dicta facere nobis!; Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam similique temporibus quae pariatur odio molestiae quisquam accusantium assumenda voluptatibus, ullam, autem veniam deserunt eius vitae asperiores non inventore sequi et.;Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores nulla, voluptatem labore, assumenda neque voluptatum possimus corrupti temporibus veniam amet accusamus! Magni, provident soluta vitae laudantium delectus voluptatibus nihil dolore.;Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ad voluptate itaque quaerat quos officia tempore cupiditate, modi quia voluptas velit fuga ex. Doloribus, expedita reprehenderit laborum dignissimos necessitatibus numquam.;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla distinctio repellendus esse voluptatum adipisci facere reiciendis explicabo unde commodi in, ipsum suscipit possimus vitae minus! Dolor suscipit laboriosam odio non</p>
     </main>
     
 </body>
