--- a/exercicio/ex023/tabela005.html
+++ b/exercicio/ex023/tabela005.html
@@ -22,11 +22,24 @@
             text-align: center;
             padding: 5px;
         }
+        .cnome{
+            background-color: rgb(208, 255, 196);
+        }
+        .cprof{
+            background-color: blueviolet;
+        }
     </style>
 </head>
 <body>
     <h1>Exercício de Tabela</h1>
     <table>
+        <colgroup>
+            <col class="cnome">
+            <col class="csexo">
+            <col class="cidade">
+            <col class="cprof">
+        </colgroup>
+
         <caption>Cadastro</caption>
         <thead>
             <tr>
