--- a/exercicio/ex027/flex003/index.html
+++ b/exercicio/ex027/flex003/index.html
@@ -15,8 +15,10 @@ Exemplo de Bloco <!DOCTYPE html>
 
             display: flex;   
             flex-flow: row wrap;
-            justify-content:space-evenly;
+            justify-content:flex-start;
             align-items:flex-start;
+            align-content: flex-start;
+            
 
 
         }
